fixed spacing around icons in buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,8 +190,8 @@ section h5 {
     background-color: #f00;
 }
 
-.actions i {
-    padding-left: 0.2rem;
+button i {
+    padding-left: 0.5rem;
 }
 
 .close-modal {
